games/thief/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krali4-thief
  namespace: __NAMESPACE__
  labels:
    app: krali4-thief
spec:
  type: NodePort
  selector:
    app: krali4-thief
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 30022
